--- a/carrer1.html
+++ b/carrer1.html
@@ -17,7 +17,7 @@
             <div class="col-lg-6 col-sm-12">
                 <div class="product-card mb-2">
                     <div class="card" id="place">
-                        <img src="/assets/ashok.png"  alt="Product Image" id="maain"style="height: 300px;width: 300px;">
+                        <img src="assets/ashok.png"  alt="Product Image" id="maain"style="height: 300px;width: 300px;">
                         <div class="card-body d-flex flex-column align-items-center">
                             <h5 class="card-title">Jagatha Ashok Kumar</h5>
                             <p class="card-text">One of our student Mr.Ashok Kumar has been selected for top MNC's companies in year 2023.He was selected for almost every company in campus selection.Some of them are Microsoft,Amazon,Google,Tcs and many more companies.He has selected for Amazon for highest package of 32 lakh per annum.</p>
@@ -37,7 +37,7 @@
             <div class="col-lg-6 col-sm-12">
                 <div class="product-card mb-2 ">
                     <div class="card" id="place">
-                        <img src="/assets/file (1).png" alt="Product Image" id="maain"style="height: 300px;width: 300px;">
+                        <img src="assets/file (1).png" alt="Product Image" id="maain"style="height: 300px;width: 300px;">
                         <div class="card-body d-flex flex-column align-items-center">
                             <h5 class="card-title">Velisetty Durga Pavan Kumar</h5>
                             <p class="card-text">One of our student Mr.Pavan Kumar has been selected for top MNC's companies in year 2023.He was selected for most of the companies in campus selection.Some of them are Microsoft,Amazon,Google,Tcs and many more companies.He has selected for Google for highest package of 30 lakh per annum.</p>
@@ -62,7 +62,7 @@
             <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="product-card mb-2">
                     <div class="card ">
-                        <img src="/assets/tcslogo.png" class="card-img-top1" alt="Product Image" style="height: 200px;width: 200px;">
+                        <img src="assets/tcslogo.png" class="card-img-top1" alt="Product Image" style="height: 200px;width: 200px;">
                         <div class="card-body d-flex flex-column align-items-center">
                             <h5 class="card-title">Tata Consultancy services</h5>
                             <p class="card-text">Tata Consultancy Services (TCS) is one of the largest multinational IT service and consulting companies. It is headquartered in Mumbai, India, but has offices globally. TCS is well known in the e-governance, banking and financial services,telecommunications,education and healthcare markets.
@@ -78,7 +78,7 @@
          <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="product-card mb-2">
                     <div class="card">
-                        <img src="/assets/accenturelogo.jpg" class="card-img-top1" alt="Product Image" style="height: 200px;width: 200px;">
+                        <img src="assets/accenturelogo.jpg" class="card-img-top1" alt="Product Image" style="height: 200px;width: 200px;">
                         <div class="card-body d-flex flex-column align-items-center">
                             <h5 class="card-title">Accenture</h5>
                             <p class="card-text">Accenture is a US-based multinational professional services company that specializes in information technology (IT) services and consulting.Accenture is a Fortune Global 500 company with approximately 742,000 people serving clients in more than 120 countries. In 2023, Accenture reported revenues of $64.1 billion and its clients include 91 of the Fortune Global 100 and more than three-quarters of the Fortune Global 500.                  
@@ -93,7 +93,7 @@
             <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="product-card mb-2">
                     <div class="card">
-                        <img src="/assets/Deloitte_Logo.png" class="card-img-top1" alt="Product Image" style="height: 200px;width: 200px;">
+                        <img src="assets/Deloitte_Logo.png" class="card-img-top1" alt="Product Image" style="height: 200px;width: 200px;">
                         <div class="card-body d-flex flex-column align-items-center">
                             <h5 class="card-title">Deloitte</h5>
                             <p class="card-text">Deloitte is a global professional services organization that offers services in audit and assurance, consulting, financial advisory, risk advisory, tax, and legal. Deloitte is a brand under which independent firms work together to provide services to specific clients. These firms are members of Deloitte Touche Tohmatsu Limited (DTTL), a UK private company limited by guarantee. Deloitte has around 415,000 employees in 150 countries and territories
@@ -112,7 +112,7 @@
             <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="product-card mb-2">
                     <div class="card">
-                        <img src="/assets/tvaranalogo.jpeg" class="card-img-top" alt="Product Image" style="height: 200px;width: 200px;">
+                        <img src="assets/tvaranalogo.jpeg" class="card-img-top" alt="Product Image" style="height: 200px;width: 200px;">
                         <div class="card-body d-flex flex-column align-items-center">
                             <h5 class="card-title">Tvarana</h5>
                             <p class="card-text">Tvarana was founded in 2007 with a focus on cloud-based enterprise applications. Our team specializes in offering cloud solutions to users of ERP and CRM platforms and has experience with technologies like NetSuite, Salesforce and IPAAS solutions such as Boomi, MuleSoft and Celigo.The team of tvarana are good in making gooding decisions.They provide good conditions.The timings is quite different from other companies.
@@ -127,7 +127,7 @@
             <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="product-card mb-2">
                     <div class="card">
-                        <img src="/assets/wiprologo.webp" class="card-img-top" alt="Product Image" style="height: 200px;width: 200px;">
+                        <img src="assets/wiprologo.webp" class="card-img-top" alt="Product Image" style="height: 200px;width: 200px;">
                         <div class="card-body d-flex flex-column align-items-center">
                             <h5 class="card-title">Wipro</h5>
                             <p class="card-text">Wipro Limited is a global company that offers information technology, consulting, and business process services. They help clients with digital transformation by using cognitive computing, hyper-automation, robotics, cloud, analytics, and other emerging technologies. Wipro has over 250,000 employees and business partners in 66 countries. The company provides all the facilities for employees without hesitation               
@@ -142,7 +142,7 @@
             <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="product-card mb-2">
                     <div class="card">
-                        <img src="/assets/Cognizant-Logo.jpg" class="card-img-top" alt="Product Image" style="height: 200px;width: 200px;">
+                        <img src="assets/Cognizant-Logo.jpg" class="card-img-top" alt="Product Image" style="height: 200px;width: 200px;">
                         <div class="card-body d-flex flex-column align-items-center">
                             <h5 class="card-title">Cognizant</h5>
                             <p class="card-text">Cognizant Technology Solutions Corp (CTS) is a global multinational IT services provider that offers consulting and business process outsourcing (BPO) services. CTS's services include artificial intelligence,digital engineering,digital experience,and digital strategy. The company has nearly 300,000 employees globally, with roughly 70% of them in India. CTS's headquarters are in Teaneck, New Jersey,and the company trades under CTSH on the NASDAQ-100.
@@ -161,7 +161,7 @@
             <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="product-card mb-2">
                     <div class="card">
-                        <img src="/assets/Amazon-Logo.png" class="card-img-top" alt="Product Image" style="height: 200px;width: 200px;">
+                        <img src="assets/Amazon-Logo.png" class="card-img-top" alt="Product Image" style="height: 200px;width: 200px;">
                         <div class="card-body d-flex flex-column align-items-center">
                             <h5 class="card-title">Amazon</h5>
                             <p class="card-text">Amazon is an American multinational technology company that focuses on e-commerce, cloud computing, digital streaming, and artificial intelligence (AI). Amazon started as an online bookselling company, but has since expanded into many other product categories. Amazon offers a wide selection of products, including apparel, electronics, groceries, games, and toys. Amazon also has many subsidiaries, including Amazon Web Services (cloud computing), Zoox (autonomous vehicles), Kuiper Systems (satellite Internet), and Amazon Lab126 (computer hardware R&D).    
@@ -176,7 +176,7 @@
              <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="product-card mb-2">
                     <div class="card">
-                        <img src="/assets/googlelogo.jpg" class="card-img-top" alt="Product Image" style="height: 200px;width: 200px;">
+                        <img src="assets/googlelogo.jpg" class="card-img-top" alt="Product Image" style="height: 200px;width: 200px;">
                         <div class="card-body d-flex flex-column align-items-center">
                             <h5 class="card-title">Google</h5>
                             <p class="card-text">Google is an American multinational technology company that focuses on internet-related services and products, including search, advertising, cloud computing, software, and hardware. Google was founded in 1998 by Sergey Brin and Larry Page, who met at Stanford University in 1995. The two initially disagreed, but eventually partnered to build a search engine called Backrub that used links to determine the importance of pages on the World Wide Web. Backrub was later renamed Google, a play on words.Their offer best Internships.
@@ -191,7 +191,7 @@
             <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="product-card mb-2">
                     <div class="card">
-                        <img src="/assets/flipkartlogo.webp" class="card-img-top" alt="Product Image" style="height: 200px;width: 200px;">
+                        <img src="assets/flipkartlogo.webp" class="card-img-top" alt="Product Image" style="height: 200px;width: 200px;">
                         <div class="card-body d-flex flex-column align-items-center">
                             <h5 class="card-title">Flipkart</h5>
                             <p class="card-text">The Flipkart Group is one of India's leading digital commerce entities and includes group companies Flipkart, Myntra, Flipkart Wholesale, Flipkart Health+ and Cleartrip. The Group is also a majority shareholder in PhonePe, one of the leading Payments Apps in India.
@@ -211,7 +211,7 @@
             <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="product-card mb-2">
                     <div class="card">
-                        <img src="/assets/microsoft logo.avif" class="card-img-top" alt="Product Image" style="height: 200px;width: 200px;">
+                        <img src="assets/microsoft logo.avif" class="card-img-top" alt="Product Image" style="height: 200px;width: 200px;">
                         <div class="card-body d-flex flex-column align-items-center">
                             <h5 class="card-title">Microsoft</h5>
                             <p class="card-text">Microsoft is an American multinational technology company that develops and sells computer software, video games, and hardware, as well as cloud computing services, search, and other online services. Microsoft's best-known products include the Windows operating system, Microsoft Office, and the Edge web browser.Microsoft's first operating system, Windows 1.0, was released in 1985. The company's headquarters are in Redmond, Washington, and it has offices in more than 60 countries.
@@ -226,7 +226,7 @@
             <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="product-card mb-2">
                     <div class="card">
-                        <img src="/assets/nestlelogo.png" class="card-img-top" alt="Product Image" style="height: 200px;width: 200px;">
+                        <img src="assets/nestlelogo.png" class="card-img-top" alt="Product Image" style="height: 200px;width: 200px;">
                         <div class="card-body d-flex flex-column align-items-center">
                             <h5 class="card-title">Nestle</h5>
                             <p class="card-text">Nestlé is the world's largest food and beverage company, with over 2,000 brands, including Nescafé, KitKat, Gerber, and Purina, and a presence in 191 countries. The company was founded over 150 years ago by Henri Nestlé and the Page brothers. Nestlé believes that good food can help people live life to the fullest, and that food can also help children grow healthily, pets thrive, and parents age gracefully. The company also aims to deliver sustainable financial performance.
@@ -241,7 +241,7 @@
             <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="product-card mb-2">
                     <div class="card">
-                        <img src="/assets/hp logo.png" class="card-img-top" alt="Product Image" style="height: 200px;width: 200px;">
+                        <img src="assets/hp logo.png" class="card-img-top" alt="Product Image" style="height: 200px;width: 200px;">
                         <div class="card-body d-flex flex-column align-items-center">
                             <h5 class="card-title">Hewlett-Packard</h5>
                             <p class="card-text">HP Inc. is an American multinational information technology company that develops personal computers, printers, and 3D printing services. The company is headquartered in Palo Alto, California, and has operations across the Americas, Europe, the Middle East, Africa, and Asia-Pacific. HP offers its products to individual consumers, small and medium-sized businesses, and large enterprises, including customers in the government, health, and education sectors.HP provides good facilitites. 
